Moved Around Quantum Variable
Removed Quantum from Process Class and gave fillList() an input variable